# opencode-memory

./: .gitignore  ARCHITECTURE.md  README.md
docs/: index.html
service/: pyproject.toml
service/memory_service/: config.py  dashboard.py  embeddings.py  extractor.py  main.py  models.py  store.py
