[project]
name = "opencode-memory"
version = "0.1.0"
description = "HTTP memory service for AI agents — persistent, semantic, cross-instance"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlite-vec>=0.1.6",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
memory-service = "memory_service.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
